--- a/scss/main.css
+++ b/scss/main.css
@@ -876,13 +876,13 @@ button.swiper-pagination-bullet {
   }
   header {
     position: absolute;
-    z-index: 9999;
+    z-index: 9998;
     width: 100vw;
   }
   header.is-active {
     -webkit-box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
             box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
-    z-index: 9999;
+    z-index: 9998;
   }
   header nav {
     display: -webkit-box;
@@ -1102,6 +1102,9 @@ button.swiper-pagination-bullet {
 }
 
 @media (min-width: 768px) {
+  header {
+    z-index: 9999;
+  }
   header nav {
     height: 7em;
     padding: 1em;
@@ -1115,10 +1118,13 @@ button.swiper-pagination-bullet {
     width: 100%;
     height: 100%;
   }
+  header.is-active {
+    z-index: 9999;
+  }
   header.scroll-fixed {
     -webkit-transition: background-color 1s;
     transition: background-color 1s;
-    background-color: black;
+    background-color: #222;
     position: fixed;
   }
   header.scroll-fixed nav {
@@ -1304,7 +1310,6 @@ button.swiper-pagination-bullet {
   header.scroll-fixed {
     -webkit-transition: background-color 1s;
     transition: background-color 1s;
-    background-color: black;
     position: fixed;
     height: unset;
   }
@@ -2710,6 +2715,9 @@ button.swiper-pagination-bullet {
   }
   #portfolio {
     width: 100%;
+    background-color: white;
+    position: relative;
+    z-index: 9999;
   }
   #portfolio .container {
     width: 100%;
@@ -3571,6 +3579,9 @@ button.swiper-pagination-bullet {
   }
   #landing .container .graphic img {
     max-width: 275px;
+  }
+  #portfolio {
+    z-index: 1;
   }
 }
 
